@@ -16,6 +16,7 @@ PHP                                                                        NEWS
   when calling using Reflection. (Felipe)
 - Fixed crash when instantiating PDORow and PDOStatement through Reflection.
   (Felipe)
+- Fixed memory leak in openssl_pkcs12_export_to_file(). (Felipe)
 
 - Fixed bug #49990 (SNMP3 warning message about security level printed twice).
   (Jani)
